<resources>
    <string name="app_name">필맵</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">남진민</string>
    <string name="nav_header_subtitle">12161103@inha.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">사진찍기 좋은 명소</string>
    <string name="menu_smork">흡연구역</string>
    <string name="menu_study">공부하기 좋은 카페</string>
    <string name="menu_pet">반려동물 동반출입이 가능한 곳</string>
    <string name="menu_brightness">야경이 아름다운 곳</string>
    <string name="menu_phone">휴대폰 성지</string>
    <string name="menu_pregnant">태교에 좋은 곳</string>
    <string name="menu_walk">생각없이 걷기 좋은 곳</string>
    <string name="menu_bike">자전거 타기 좋은 곳</string>
    <string name="menu_beach">휴양하기 좋은 곳</string>
    <string name="menu_add">테마추가</string>

    <string name="menu_list">List</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>




</resources>
