<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.termproject2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

<!--    <fragment-->
<!--        android:id="@+id/floatingActionButton"-->
<!--        android:name="com.example.termproject2.ui.ListFragment"-->
<!--        android:label="@string/menu_list"-->
<!--        tools:layout="@layout/place_list" />-->

    <fragment
        android:id="@+id/floatingActionButton"
        android:name="com.example.termproject2.ui.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/place_list" />

<!--    <fragment-->
<!--        android:id="@+id/nav_home_second"-->
<!--        android:name="com.example.termproject2.ui.home.HomeSecondFragment"-->
<!--        android:label="@string/home_second"-->
<!--        tools:layout="@layout/fragment_home_second">-->
<!--        <action-->
<!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
<!--            app:destination="@id/nav_home" />-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.termproject2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.termproject2.ui.add.addFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add" />


</navigation>